--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,9 +15,11 @@
     <link rel="stylesheet" href="hadogun_common/main.css">
     <script id="template" type="x-tmpl-mustache">
     <li>
+        <a href="{{url}}" target="_blank">
         <img src="{{img_url}}">
         <div class="screen_name">{{name}}</div>
         <div class="text">{{text}}</div>
+        </a>
     </li>
     </script>
     <script id="hadogun_template" type="x-tmpl-mustache">
