--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
 
+    <!-- ここから 覇道砲 -->
     <script src="hadogun_common/jquery-1.11.1.min.js"></script>
     <script src="hadogun_common/autobahn.min.js"></script>
     <script src="hadogun_common/mustache.min.js"></script>
@@ -26,13 +27,16 @@
     {{text}}<br>
     {{author}}
     </script>
+    <!-- ここまで -->
 
 </head>
 <body>
 
-<div style="width:710px; height:100px; overflow: hidden; background-image: url(hadogun_common/img/background.jpg);">
-    <img src="hadogun_common/img/lspk.png" id="lspk" style="position: absolute">
-    <img src="hadogun_common/img/sspk.png" id="sspk" style="position: absolute">
+<!-- 所定の位置にこのDIVをさしこむ -->
+<div id="hadogun_client">
+    <img src="hadogun_common/img/lspk.png" id="lspk">
+    <img src="hadogun_common/img/sspk.png" id="sspk">
+    <!-- 初期ツイートを適当にここに書き込む -->
     <ul id="tweet-list" style="margin-left:140px;">
         <li>
             <img src="https://pbs.twimg.com/profile_images/378800000122330373/c9162e04e2a5fb779758cc4f0a13c2c0_400x400.jpeg" >
@@ -40,7 +44,6 @@
             <div class="text">テキストテキストテキスト</div>
         </li>
     </ul>
-
 </div>
 
 
