デフォルト文言修正

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,9 +39,9 @@
     <!-- 初期ツイートを適当にここに書き込む -->
     <ul id="tweet-list" style="margin-left:140px;">
         <li>
-            <img src="https://pbs.twimg.com/profile_images/378800000122330373/c9162e04e2a5fb779758cc4f0a13c2c0_400x400.jpeg" >
-            <div class="screen_name">uzulla</div>
-            <div class="text">テキストテキストテキスト</div>
+            <img src="https://pbs.twimg.com/profile_images/59475119/2560891_68_400x400.jpg" >
+            <div class="screen_name">hadoch</div>
+            <div class="text">Please tweet with #hadoch !!!</div>
         </li>
     </ul>
 </div>
