--- a/public_html/index.html
+++ b/public_html/index.html
@@ -47,7 +47,7 @@
 </div>
 
 
-<iframe width="480" height="299" src="http://www.ustream.tv/embed/16395211?v=3&amp;wmode=direct" scrolling="no" frameborder="0" style="border: 0px none transparent;">    </iframe>
+<iframe width="480" height="299" src="http://www.ustream.tv/embed/16395211?v=3&amp;wmode=direct" scrolling="no" frameborder="0" style="border: 0 none transparent;">    </iframe>
 <br /><a href="http://www.ustream.tv" style="font-size: 12px; line-height: 20px; font-weight: normal; text-align: left;" target="_blank">Broadcast live streaming video on Ustream</a>
 
 </body>
